--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kesari99.github.io/jobsPortal",
+  "homepage": "https://kesari99.github.io/jobPortal",
   "name": "job_portal",
   "version": "0.1.0",
   "private": true,
